--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <title>Using Parcel with OpenLayers</title>
     <style>
       #map {
-        width: 100%;
-        height: 500px;
+        width: 8000px;
+        height: 5000px;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     </style>
   </head>
