--- a/index.html
+++ b/index.html
@@ -4,17 +4,30 @@
     <meta charset="utf-8" />
     <title>Using Parcel with OpenLayers</title>
     <style>
+      body {
+        margin: 0px;
+        width: 1280px;
+        height: 720px;
+      }
       #map {
-        width: 8000px;
-        height: 5000px;
-        position: absolute;
-        top: 0;
-        left: 0;
+        position: relative;
+        float: left;
+        width: 75%;
+        height: 100%;
+      }
+      #chart {
+        position: relative;
+        float: left;
+        width: 25%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
     <div id="map"></div>
+    <div id="chart">
+      <canvas id="myChart"></canvas>
+    </div>
     <div id="info">&nbsp;</div>
     <script src="./index.js"></script>
   </body>
