--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
       body {
         position: relative;
         margin: 0px;
-        width: 1280px;
+        width: 1920px;
         height: 720px;
       }
       #map {
+        padding-top: 3%;
         position: relative;
         float: left;
         width: 75%;
@@ -24,10 +25,10 @@
       }
       #legend {
         position: absolute;
-        width: 5%;
+        width: 3%;
         height: 30%;
         left: 10%;
-        top: 70%;
+        top: 50%;
       }
     </style>
   </head>
